startups/cdtn/apps/elasticsearch/envs/dev/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cdtn-es-allow-from-project
spec:
  podSelector:
    matchLabels:
      common.k8s.elastic.co/type: elasticsearch
      elasticsearch.k8s.elastic.co/cluster-name: cdtn-es
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              common.k8s.elastic.co/type: elasticsearch
              elasticsearch.k8s.elastic.co/cluster-name: cdtn-es
      ports:
        - port: 9300
          protocol: TCP
    # Allow from Kibana in the same namespace.
    - from:
        - podSelector:
            matchLabels:
              common.k8s.elastic.co/type: kibana
              kibana.k8s.elastic.co/name: cdtn-kibana
      ports:
        - port: 9200
          protocol: TCP
    # Allow from any namespace in the same Rancher project.
    # Relies on Kyverno mirroring the Rancher annotation
    # `field.cattle.io/projectId: c-m-97jxtvnv:p-5kn66` into this label.
    - from:
        - namespaceSelector:
            matchLabels:
              rancher.projectId: c-m-97jxtvnv-p-5kn66
      ports:
        - port: 9200
          protocol: TCP
